FIX- sizing on smaller screens

--- a/Task list/css/style.css
+++ b/Task list/css/style.css
@@ -151,7 +151,7 @@
        margin-right:150px;
      }
      #completedonly{
-      margin-left:180px;
+      margin-left:179px;
     }
    }
   
